test/corpus/contract.txt
==================
Minimal contract with constructor
==================

contract C
constructor()
    iff true
    creates
        uint x := 0

------------------

(source_file
  (contract
    name: (identifier)
    (constructor
      (interface)
      (preconditions
        (bool_literal))
      (constr_cases
        (creates
          (create
            type: (value_type
              (abi_type (uint_type)))
            name: (identifier)
            value: (int_literal)))))))

==================
Contract with payable constructor and ensures
==================

contract C
constructor() payable
    iff
        CALLVALUE > 0
    creates
        uint balance := CALLVALUE
    ensures
        post(balance) == CALLVALUE

------------------

(source_file
  (contract
    name: (identifier)
    (constructor
      (interface)
      (payable)
      (preconditions
        (binary_expr
          left: (env_var)
          right: (int_literal)))
      (constr_cases
        (creates
          (create
            type: (value_type
              (abi_type (uint_type)))
            name: (identifier)
            value: (env_var))))
      (ensures
        (binary_expr
          left: (ref_expr
            (ref (post_ref (ref (identifier)))))
          right: (env_var))))))

==================
Multiple contracts in one file
==================

contract A
constructor(uint z)
    iff
        inRange(uint256, z + 42)
    creates
        uint x := z + 42

contract B
constructor()
    iff true
    creates
        uint y := 0

------------------

(source_file
  (contract
    name: (identifier)
    (constructor
      (interface
        (arg
          type: (arg_type (abi_type (uint_type)))
          name: (identifier)))
      (preconditions
        (in_range_expr
          type: (abi_type (uint_type))
          value: (binary_expr
            left: (ref_expr (ref (identifier)))
            right: (int_literal))))
      (constr_cases
        (creates
          (create
            type: (value_type (abi_type (uint_type)))
            name: (identifier)
            value: (binary_expr
              left: (ref_expr (ref (identifier)))
              right: (int_literal)))))))
  (contract
    name: (identifier)
    (constructor
      (interface)
      (preconditions
        (bool_literal))
      (constr_cases
        (creates
          (create
            type: (value_type (abi_type (uint_type)))
            name: (identifier)
            value: (int_literal)))))))
